--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -6,6 +6,7 @@
   background: var(--bg);
   border-radius: 6px;
   position: relative;
+  z-index: 0;
   transition: all 0.2s;
 }
 
@@ -48,6 +49,7 @@
   background: var(--bg);
   border-radius: 6px;
   position: relative;
+  z-index: 0;
   transition: all 0.2s;
 }
 
